html/css changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <p>
         Exploring S3 buckets and configuring them for static website hosting
     </p>
+    <p>
+        I can now edit the HTML and re-upload to the cloud!
+    </p>
     
 </body>
 </html>
